:recycle: Standardized person representation for language-packs and plugins